--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -98,7 +98,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="cell-output-display">
 <div id="forecast_date" class="shiny-date-input form-group shiny-input-container">
 <label class="control-label" id="forecast_date-label" for="forecast_date">Forecast date</label>
-<input type="text" class="form-control" aria-labelledby="forecast_date-label" title="Date format: yyyy-mm-dd" data-date-language="en" data-date-week-start="0" data-date-format="yyyy-mm-dd" data-date-start-view="month" data-min-date="2022-01-01" data-max-date="2024-10-18" data-initial-date="2024-10-18" data-date-autoclose="true" data-date-dates-disabled="null" data-date-days-of-week-disabled="null">
+<input type="text" class="form-control" aria-labelledby="forecast_date-label" title="Date format: yyyy-mm-dd" data-date-language="en" data-date-week-start="0" data-date-format="yyyy-mm-dd" data-date-start-view="month" data-min-date="2022-01-01" data-max-date="2024-10-23" data-initial-date="2024-10-23" data-date-autoclose="true" data-date-dates-disabled="null" data-date-days-of-week-disabled="null">
 </div>
 </div>
 </div>
@@ -288,12 +288,14 @@ chamber_levels = c("c_1_amb", "c_2_amb", "c_3_e0.75", "c_4_e1.5", "c_5_e2.25",
                      "c_6_e2.25", "c_7_e3.0", "c_8_e3.75", "c_9_e3.75", "c_10_e4.5",
                      "c_11_e5.25", "c_12_e6.0")
 scores_format <- scores %>%
-      filter(horizon > 0) %>%
+      filter(horizon > 0,
+             !model_id == "wavelet_arima") %>%
       mutate(horizon = horizon/60/60/24) %>%
       mutate(temp = sub(".+_e*", "", site_id),
              temp = ifelse(temp == "amb", 0, temp),
              temp = as.numeric(temp),
-             year = year(datetime))
+             year = year(datetime)) %>%
+  filter(year %in% c(2023,2024))
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
@@ -305,7 +307,7 @@ output$plot2 <- renderPlot({
   plot_raw_data(input$raw_data_file)
   })
 output$plot3 <- renderPlotly({
-  if(input$skill_metric == "RMSE"){
+  if(input$skill_metric == "CRPS"){
     p <- scores_format %>%
       filter(!model_id == "RW",
              horizon %in% c(1,7,30)) %>%
